[gd_scene load_steps=9 format=2]

[ext_resource path="res://Teko/Teko-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Teko/Teko-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Teko/Teko-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://StartGame.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 218
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 256
font_data = ExtResource( 1 )

[node name="Node2D" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2010.0
margin_bottom = 1159.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 305.005
margin_top = 290.954
margin_right = 1650.01
margin_bottom = 603.954
custom_fonts/font = SubResource( 1 )
text = "Steel Samurai on Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 384.139
margin_top = 740.0
margin_right = 1547.14
margin_bottom = 931.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 557.713
margin_top = 568.804
margin_right = 1520.71
margin_bottom = 735.804
custom_fonts/font = SubResource( 3 )
text = "by Andrew Dang, Anant Ahuja and Christian Albiar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 591.032
margin_top = 366.82
margin_right = 1385.03
margin_bottom = 734.82
custom_fonts/font = SubResource( 4 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
